fix import, update departmetn